# Lisa

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Config.cmake.in  README  README.md  cli_lisa.sh
src/: CMakeLists.txt  lisa_binfiles.cpp  lisa_binfiles.hpp  lisa_config.hpp.in  lisa_constants.hpp  lisa_detector.cpp  lisa_detector.hpp  lisa_errors.cpp  lisa_errors.hpp  lisa_main.cpp  lisa_math.cpp  lisa_math.hpp  lisa_noise.cpp  lisa_noise.hpp  lisa_types.cpp  lisa_types.hpp  lisa_utils.cpp  lisa_utils.hpp
src/tests/: CMakeLists.txt  GBSignalTests.cpp  ParamBinfileTests.cpp  TDIPowerFitTests.cpp  gtest_to_html.xslt
tools/cli/: config  utils.sh
tools/cli/commands/: build.sh  clean.sh  configure.sh  install.sh
